# django-select2-forms

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
select2/: __init__.py  admin.py  fields.py  select2.py  urls.py  utils.py  views.py  widgets.py
select2/models/: base.py  descriptors.py
select2/static/select2/css/: djselect2.css  select2.css
select2/static/select2/js/: djselect2.js  plugin.djselect2.js  select2.jquery_ready.js  select2.js  select2.min.js
select2/static/select2/select2/: release.sh  select2.js
select2/templatetags/: select2.py
select2/tests/: admin.py  models.py  settings.py  test_admin.py  urls.py
select2/tests/fixtures/: select2-test-data.xml
tests/: admin.py  models.py  settings.py  test_admin.py  urls.py
